# engine

./: .dockerignore  .gitignore  AGENTS.md  LICENSE.md  Makefile  README.md  composer-dependency-analyser.php  composer.json  performance.md  phpbench.json  phpunit.xml  psalm-baseline.xml  psalm.xml  roadmap.md  yii
.github/: copilot-instructions.md
benchmarks/: AssetFingerprintingBench.php  BuildBench.php  BuildProfileBench.php  ContentParserBench.php  EntryAuthorLinksBench.php  EventDispatcherBench.php  FileWatcherBench.php  GhostImporterBench.php  HookDispatcherBench.php  HugoImporterBench.php  JekyllImporterBench.php  LargeContentBuildBench.php  LatexMathProcessorBench.php  MarkdownParserComparisonBench.php  MarkdownRendererBench.php  MediumImporterBench.php  NavigationRendererBench.php  OEmbedProcessorBench.php  OutputMinifierBench.php  PortableWorkerPoolBench.php  ProjectProcessorBench.php  ProjectShortcodeProcessorBench.php  ProjectThemeDiscoveryBench.php  RealisticBuildBench.php  RelatedIndexBench.php  ServeDevToolsBench.php  SiteCheckerBench.php  SmallSiteBuildBench.php  SyntaxHighlighterBench.php  TagLinkProcessorBench.php  TelegramImporterBench.php  TemplateContextBench.php  ThemeAssetCopierBench.php  UiTextBench.php  WordPressImporterBench.php  generate_content.php  generate_realistic_content.php
config/: configuration.php
content/: config.yaml  index.md  navigation.yaml
docker/: .env  Dockerfile  Dockerfile.distroless-binary  compose.yml  php-prod.ini  php.ini
src/Highlighter/: Cargo.toml  SyntaxHighlighter.php
src/Highlighter/src/: lib.rs
(+324 files in other folders)
