[package]
name = "yiipress-highlighter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
